               downtimed - system downtime reporting tool

                           version history

version 0.4 released 2010-XX-XX

 - OpenBSD support and other minor fixes by Mats Erik
   Andersson <openbsd@gisladisker.se>.

 - GNU/kFreeBSD support by Mats Erik Andersson <openbsd@gisladisker.se>.

 - change backwards lseek(2) to forward lseek(2) as the backwards seek
   fails on some platforms, by Mats Erik Andersson <openbsd@gisladisker.se>

version 0.3 released 2010-10-26

 - Mac OS X support by Henrik Ahlgren <pablo@seestieto.com>

 - Fix man page rendering on various OSes such as FreeBSD (we were
   using non-standard .SY, .YS and .OP macros) [this has no
   effect on GNU/Linux, no need to upgrade]

 - Fix printf format string to avoid compiler warnings

version 0.2 released 2010-09-22

 - implemented downtimes(1) command for displaying the contents of
   the downtime database in human readable format

 - implemented downtime database in the downtimed(8) daemon

 - moved the location of data files from /var/lib/misc/downtimed/
   to /var/lib/downtimed/ on Linux.

 - the default sleep time between time stamp updates is now 15 seconds
   instead of 5 as previously

 - minor documentation improvements

version 0.1 released 2010-05-22

 - initial release

/* eof */